--- a/app/templates/homebrew-meet.hbs
+++ b/app/templates/homebrew-meet.hbs
@@ -1,1 +1,28 @@
 {{outlet}}
+---
+title: Homebrew D&D - Meet the Characters
+image: /images/armor-armory-armour-63852.jpg
+imageMeta:
+  attribution:
+  attributionLink:
+featured: true
+author: king
+date: Wed Apr 24 2019 09:53:00 GMT+0100 (IST)
+tags:
+  - D&D
+  - homebrew
+  - tabletop
+---
+
+
+
+
+| Character Name      | Race       | Class    | Trait   |   |
+|---------------------|------------|----------|---------|---|
+| Thoridin Frostbeard | Dwarf      | Cleric   |         |   |
+| Rolk                | Kobold     | Bard     |         |   |
+| Rhogar              | Dragonbor  | Sorcerer |         |   |
+| Shin                | Human      | Monk     |         |   |
+
+
+Thoridin Frostbeard, a powerful, drunken, gay hill dwarf is the rock of the party... Or, should I say anchor, as he spent many years of his life on the sea, gaining knowledge in both medicine and seafaring before meeting his lover, Derik, an orc warrior and companion of the party.
